— Изменение настроек сборки для ПК